# FlaskHelloWorldCodespaces

./: LICENSE  README.md  pyproject.toml  startup.py
docs/: devjournal.md
web/: __init__.py  app.py
